stop page from 'jumping' on opening of centre

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,7 +8,8 @@
 html .topbar {
   position: absolute;
 }
-body { margin-top: 60px; }
+body { margin-top: 40px; }
+#page-root { padding-top: 20px; }
 
 .main {
   display: inline;
