--- a/app/assets/stylesheets/notification-centre.css.scss
+++ b/app/assets/stylesheets/notification-centre.css.scss
@@ -3,7 +3,6 @@
 #notification-centre {
   background-image: url('ios-linen.jpg');
   display: none;
-  margin-bottom: 20px;
   padding: 20px;
 
   h2 {
